0.6.0 - June 23rd, 2006

* Added internationalization, with translations to Dutch, German, Italian,
  French and Spanish.
* Added stamp function for pencil: right-click, drag now creates a stamp
  for easy copying
* Added more error-checking to XMLMapTransformer, the default map reader
* Added global properties for tilesets (properties set for all tiles)
* Added the ability to merge tile images when layers are merged
* Added more useful visual feedback for some brushes
* Added remembering of main window state as suggested by Dennis Spreen
* Added remembering of size and divider position to tile palette dialog
* Added memory usage display and a garbage collect button to the about dialog
* Added JSON exporter plugin by Nader Akhres
* Improved memory usage and speed in several areas
* Fixed new tileset dialog so that it is now possible to change the tile height
  to something other than the tile height used by the map
* Fixed a bug when exporting a tileset with an external image
* Fixed two cases of hanging when using the fill tool
* Fixed tile palette bug of not accounting for gaps in tile ids
* Fixed tile palette bug of displaying multiple tilesets over eachother
* Fixed bug of adding a new tile even if cancelling out of new tile dialog
* Fixed NullPointerException when saving a map with no extension
* Fixed the zooming so that it keeps the center in place
* Fixed exiting even when a request to save the changes failed
* Fixed layer merging so that undo/redo of operation is functional
* Fixed resetting of selected tileset in tile palette on layer rearrangements
* Fixed saving of tile properties when using a tileset image
* Fixed loading of invisible layers
* Fixed saving of tile spacing property for tileset images
* Fixed configuring, saving and loading of maps using embedded images
* Rewrote configuration based on the Preferences class, no more tiled.conf
* Cleaned up TileSet (removed checksumming and rotation/orientation code)